--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,9 @@
 ---
-pxe_server_listen_port: 8188
+pxe_server_listen: "127.0.0.1:8188"
 pxe_server_iso_file_path: /var/lib/tftpboot/centos7.iso
 pxe_server_iso_download_path: "http://ftp.riken.jp/Linux/centos/7/isos/x86_64/CentOS-7-x86_64-Minimal-1511.iso"
 pxe_server_iso_mount_path: /var/www/html/centos7
+
+pxe_server_default_timeout: 300
+pxe_server_default_title: "########## CentOS 7 PXE Boot Menu ##########"
+pxe_server_default_menu: {}
